--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.py linguist-detectable=true
-*.ipynb linguist-detectable=false
+*.ipynb linguist-detectable=true
+LICENSE linguist-detectable=false
