--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.py linguist-detectable=true
-*.ipynb linguist-detectable=true
-LICENSE linguist-detectable=false
+*.py linguist-language=Python
+*.ipynb linguist-language=Python
+LICENSE linguist-language=Text
